tdf#113938 sw: apply new default vertical orientation only during import

Commit c79467ba954987f1d239c594c1e1b3af3f5515f6 changed the default
vertical orientation for shapes in Writer; it turns out that at
least one extension assumes the previous default.

Tweak SwXShape so that the new default is used for shapes that are
created during file import, otherwise the old default.

Change-Id: I1dc4d3342dd53ce8e0857984456717b8ffcc97c7